matching new mockup

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -16,13 +16,13 @@ your dad took the bread and he like, absconded man
 	</head>
 	<body>
 		<video playsinline autoplay muted id="watercolorIntro">
-			<source src="assets/watercolor.mp4" type="video/mp4">
+			<source src="assets/bluewatercolor.mp4" type="video/mp4">
 		</video>
 
 		<div class="container" id="openingLogoContainer">
 			<div class="content">
 				<img id="openingLogo" src="assets/mixedemotionsanimated-noloop-crop.gif" alt="">
-				<p><button class="button" id="startButton">START</button>
+				<p><button class="button" id="startButton">Start</button>
 			</div>
 		</div>
 
@@ -30,7 +30,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*Include a note or message from Roy: Why the album is named Mixed Emotions and how he wants his fans to go on a journey with him to learn about the album*
 				<div class="question">
-						Wha gwan, how’s your day?
+					Wha gwan, how’s your day?
 				</div>
 				<p><button class="button" id="button2a" onclick="displayQuestion2a()">TBH I’ve been better</button>
 				<p><button class="button" id="button2b" onclick="displayQuestion2b()">My day is 10/10</button>
@@ -41,10 +41,10 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>I wanted to share something to make your day a little brighter. Here is my FULL tracklist for Mixed Emotions the album.
 				<div class="question">
-						What do you think?
-						<p><button class="button" id="button3a" onclick="displayQuestion3a()">MOD TING !!!</button>
-						<p><button class="button" id="button3b" onclick="displayQuestion3b()">Need more features</button>
+					What do you think?
 				</div>
+				<p><button class="button" id="button3a" onclick="displayQuestion3a()">MOD TING !!!</button>
+				<p><button class="button" id="button3b" onclick="displayQuestion3b()">Need more features</button>
 			</div>
 		</div>
 
@@ -52,10 +52,10 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>I wanted to share part of an unreleased song that will be on the album with you, to keep up the good vibes of your day.
 				<div class="question">
-						What do you think about {song title}
-						<p><button class="button" id="button3c" onclick="displayQuestion3c()">Let’s goooo, July 28th can’t come soon enough</button>
-						<p><button class="button" id="button3d" onclick="displayQuestion3d()">This reminds me of old school Roy Woods</button>
+					What do you think about {song title}
 				</div>
+				<p><button class="button" id="button3c" onclick="displayQuestion3c()">Let’s goooo, July 28th can’t come soon enough</button>
+				<p><button class="button" id="button3d" onclick="displayQuestion3d()">This reminds me of old school Roy Woods</button>
 			</div>
 		</div>
 
@@ -64,10 +64,10 @@ your dad took the bread and he like, absconded man
 				<p>So I’ve been working on this track {Song Title} and it’s about xxxx
 				<p>*10 seconds of song XXX*
 				<div class="question">
-						<!-- What do you think? -->
-						<p><button class="button" id="buttonfinal1a1" onclick="displayFinal1a1()">Option 1a-1</button>
-						<p><button class="button" id="buttonfinal1a2" onclick="displayFinal1a2()">Option 1a-2</button>
+					<!-- What do you think? -->
 				</div>
+				<p><button class="button" id="buttonfinal1a1" onclick="displayFinal1a1()">Option 1a-1</button>
+				<p><button class="button" id="buttonfinal1a2" onclick="displayFinal1a2()">Option 1a-2</button>
 			</div>
 		</div>
 
@@ -76,10 +76,10 @@ your dad took the bread and he like, absconded man
 				<p>So I’ve been working on this track That Thing and Jada Kingdom is featured…
 				<p>*10 seconds of song That Thing*
 				<div class="question">
-						<!-- What do you think? -->
-						<p><button class="button" id="buttonfinal1b1" onclick="displayFinal1b1()">Option 1b-1</button>
-						<p><button class="button" id="buttonfinal1b2" onclick="displayFinal1b2()">Option 1b-2</button>
+					<!-- What do you think? -->
 				</div>
+				<p><button class="button" id="buttonfinal1b1" onclick="displayFinal1b1()">Option 1b-1</button>
+				<p><button class="button" id="buttonfinal1b2" onclick="displayFinal1b2()">Option 1b-2</button>
 			</div>
 		</div>
 
@@ -88,10 +88,10 @@ your dad took the bread and he like, absconded man
 				<p>So I’ve been working on this track {Song Title} and it’s about xxxx
 				<p>*10 seconds of song XXX*
 				<div class="question">
-						<!-- What do you think? -->
-						<p><button class="button" id="buttonfinal2a1" onclick="displayFinal2a1()">Option 2a-1</button>
-						<p><button class="button" id="buttonfinal2a2" onclick="displayFinal2a2()">Option 2a-2</button>
+					<!-- What do you think? -->
 				</div>
+				<p><button class="button" id="buttonfinal2a1" onclick="displayFinal2a1()">Option 2a-1</button>
+				<p><button class="button" id="buttonfinal2a2" onclick="displayFinal2a2()">Option 2a-2</button>
 			</div>
 		</div>
 
@@ -100,9 +100,9 @@ your dad took the bread and he like, absconded man
 				<p>I wanted to share an exclusive clip with you from the studio. This is when I was making Drama… crazy, right??!!
 				<p>*Exclusive BTS clip from making of Drama or other studio footage*
 				<div class="question">
-						<p><button class="button" id="buttonfinal2b1" onclick="displayFinal2b1()">I have a little bit of drama with my friends</button>
-						<p><button class="button" id="buttonfinal2b2" onclick="displayFinal2b2()">Drama? That’s not me…</button>
 				</div>
+				<p><button class="button" id="buttonfinal2b1" onclick="displayFinal2b1()">I have a little bit of drama with my friends</button>
+				<p><button class="button" id="buttonfinal2b2" onclick="displayFinal2b2()">Drama? That’s not me…</button>
 			</div>
 		</div>
 
