--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -15,7 +15,7 @@ your dad took the bread and he like, absconded man
 		<link rel="stylesheet" href="css/base.css">
 	</head>
 	<body>
-		<video playsinline autoplay muted id="watercolorIntro">
+		<video playsinline autoplay muted disablepictureinpicture preload="auto" id="watercolorIntro">
 			<source src="assets/bluewatercolor.mp4" type="video/mp4">
 		</video>
 
