--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -16,7 +16,7 @@ your dad took the bread and he like, absconded man
 	</head>
 	<body>
 		<video playsinline autoplay muted disablepictureinpicture preload="auto" id="watercolorIntro">
-			<source src="assets/bluewatercolor.mp4" type="video/mp4">
+			<source src="assets/bluewatercolor3.mp4" type="video/mp4">
 		</video>
 
 		<div class="container" id="openingLogoContainer">
