--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -15,8 +15,8 @@ your dad took the bread and he like, absconded man
 		<link rel="stylesheet" href="css/base.css">
 	</head>
 	<body>
-		<video playsinline autoplay muted disablepictureinpicture preload="auto" id="watercolorIntro">
-			<source src="assets/bluewatercolor3.mp4" type="video/mp4">
+		<video playsinline autoplay muted loop disablepictureinpicture preload="auto" id="watercolorIntro">
+			<source src="assets/watercolorloop.mp4" type="video/mp4">
 		</video>
 
 		<div class="container" id="openingLogoContainer">
