make all pages flimsy

--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -109,7 +109,7 @@
 			<div class="aspect">
 				<div class="aspect-inner">
 					<div class="flipbook" id="flipbook">
-						<div class="page hard">
+						<div class="page">
 							<img src="assets/guestbook_front.jpg" draggable="false" alt="" /><
 						</div>
 						<div class="page innerpage"></div>
@@ -145,7 +145,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="page hard">
+						<div class="page">
 							<img src="assets/guestbook_back.jpg" draggable="false" alt="" />
 						</div>
 					</div>
