--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -27,10 +27,13 @@ your dad took the bread and he like, absconded man
 		</div>
 
 		<div class="container" id="container1">
+			<audio id="container1_audio">
+				<source src="assets/audio/1_whatsup.mp3" type="audio/mpeg">
+			</audio>
 			<div class="content">
 				<p>*Include a note or message from Roy: Why the album is named Mixed Emotions and how he wants his fans to go on a journey with him to learn about the album*
 				<div class="question">
-					Wha gwan, how’s your day?
+					What's up, how's your day going?
 				</div>
 				<p><button class="button" id="button2a" onclick="displayQuestion2a()">TBH I’ve been better</button>
 				<p><button class="button" id="button2b" onclick="displayQuestion2b()">My day is 10/10</button>
@@ -38,8 +41,11 @@ your dad took the bread and he like, absconded man
 		</div>
 
 		<div class="container" id="container2a">
+			<audio id="container2a_audio">
+				<source src="assets/audio/2a_sharesomething.mp3" type="audio/mpeg">
+			</audio>
 			<div class="content">
-				<p>I wanted to share something to make your day a little brighter. Here is my FULL tracklist for Mixed Emotions the album.
+				<p>I wanted to share something to make your day a little brighter. Here's the FULL tracklist for my album, Mixed Emotions.
 				<div class="question">
 					What do you think?
 				</div>
