end page pretty much done

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -27,9 +27,9 @@ your dad took the bread and he like, absconded man
 		</div>
 
 		<div class="container" id="container1">
-			<audio id="container1_audio">
+			<!-- <audio id="container1_audio">
 				<source src="assets/audio/1_whatsup.mp3" type="audio/mpeg">
-			</audio>
+			</audio> -->
 			<div class="content">
 				<p>*Include a note or message from Roy: Why the album is named Mixed Emotions and how he wants his fans to go on a journey with him to learn about the album*
 				<div class="question">
@@ -41,9 +41,9 @@ your dad took the bread and he like, absconded man
 		</div>
 
 		<div class="container" id="container2a">
-			<audio id="container2a_audio">
+			<!-- <audio id="container2a_audio">
 				<source src="assets/audio/2a_sharesomething.mp3" type="audio/mpeg">
-			</audio>
+			</audio> -->
 			<div class="content">
 				<p>I wanted to share something to make your day a little brighter. Here's the FULL tracklist for my album, Mixed Emotions.
 				<div class="question">
@@ -58,7 +58,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>I wanted to share part of an unreleased song that will be on the album with you, to keep up the good vibes of your day.
 				<div class="question">
-					What do you think about {song title}
+					What do you think about this song: <br>Unsettling featuring Vory
 				</div>
 				<p><button class="button" id="button3c" onclick="displayQuestion3c()">Let’s goooo, July 28th can’t come soon enough</button>
 				<p><button class="button" id="button3d" onclick="displayQuestion3d()">This reminds me of old school Roy Woods</button>
