--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -22,7 +22,7 @@
 						<div class="page">
 							<img src="assets/guestbook_front.jpg" draggable="false" alt="" /><
 						</div>
-						<div class="page innerpage"></div>
+						<!-- <div class="page innerpage"></div> -->
 						<div class="page innerpage">
 							<div class="guestbook_text">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus sed metus sed vulputate.
@@ -55,6 +55,7 @@
 								</div>
 							</div>
 						</div>
+						<div class="page innerpage"></div>
 						<div class="page">
 							<img src="assets/guestbook_back.jpg" draggable="false" alt="" />
 						</div>
@@ -62,12 +63,44 @@
 				</div>
 			</div>
 		</div>
-
 		<!-- END GUESTBOOK -->
+
 		<div class="endpage_btn_div">
-			<button class="button" onclick="">
+			<button class="button" onclick="window.location.href='guestbook_entry.html';">
 				Leave a note for Roy Woods
 			</button>
+		</div>
+
+		<div class="endpage_albumcta">
+			<a href="https://ovo-roywoods.ffm.to/mixedemotions" target="_blank">
+				<img src="assets/mixedemotions-cover.jpg" alt="MIXED EMOTIONS">
+			</a>
+			<p>Pre-Save <i>Mixed Emotions</i> <a href="https://ovo-roywoods.ffm.to/mixedemotions" target="_blank">here</a></p>
+		</div>
+
+		<div class="endpage_videos">
+			<h1>VIDEOS</h1>
+			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+		</div>
+
+		<div class="socials">
+			<a href="https://www.facebook.com/roywoods/" target="_blank"><div id="facebook" class="social_icon"></div></a>
+			<a href="https://www.youtube.com/channel/UCN_uuL0yjn9H5fnFqpo2S1w" target="_blank"><div id="youtube" class="social_icon"></div></a>
+			<a href="https://twitter.com/roywoods" target="_blank"><div id="twitter" class="social_icon"></div></a>
+			<a href="https://www.instagram.com/roywoods/" target="_blank"><div id="instagram" class="social_icon"></div></a>
+			<a href="https://www.tiktok.com/@roywoods?lang=en" target="_blank"><div id="tiktok" class="social_icon"></div></a>
+		</div>
+
+		<div class="footer">
+			<a href="https://www.ovosound.com/" target="_blank">
+				<div id="ovosoundlogo" class="footerlogosvg"></div>
+			</a>
+
+			<a href="http://roywoods.com/" target="_blank">
+				<div id="utulogo" class="footerlogosvg"></div>
+			</a>
 		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
