make every page hard, add continue button to the ends

--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -19,11 +19,11 @@
 			<div class="aspect">
 				<div class="aspect-inner">
 					<div class="flipbook" id="flipbook">
-						<div class="page">
+						<div class="page hard">
 							<img src="assets/guestbook_front.jpg" draggable="false" alt="" /><
 						</div>
 						<!-- <div class="page innerpage"></div> -->
-						<div class="page innerpage">
+						<div class="page innerpage hard">
 							<div class="guestbook_text">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus sed metus sed vulputate.
 								Aenean et quam nec justo accumsan volutpat. Praesent bibendum pharetra libero ac efficitur.
@@ -35,7 +35,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="page innerpage">
+						<div class="page innerpage hard">
 							<div class="guestbook_text">
 								Praesent bibendum pharetra libero ac efficitur.
 								Etiam porttitor erat eget enim iaculis, at porttitor arcu gravida. Donec fringilla ipsum et molestie viverra.
@@ -45,7 +45,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="page innerpage">
+						<div class="page innerpage hard">
 							<div class="guestbook_text">
 								Vivamus condimentum sollicitudin convallis. Etiam id mauris odio. Etiam egestas et purus volutpat convallis.
 								Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.
@@ -55,8 +55,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="page innerpage"></div>
-						<div class="page">
+						<div class="page innerpage hard"></div>
+						<div class="page hard">
 							<img src="assets/guestbook_back.jpg" draggable="false" alt="" />
 						</div>
 					</div>
