--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -116,6 +116,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 1A-1*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
@@ -123,6 +124,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 1A-2*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
@@ -130,6 +132,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 1B-1*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
@@ -137,6 +140,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 1B-2*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
@@ -144,6 +148,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 2A-1*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
@@ -151,6 +156,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 2A-2*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
@@ -158,6 +164,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 2B-1 ("A LITTLE DRAMA")*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
@@ -165,6 +172,7 @@ your dad took the bread and he like, absconded man
 			<div class="content">
 				<p>*OPTION 2B-2 ("NOT ME")*
 				<p>Video message from Roy
+				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
 
