--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -19,11 +19,11 @@
 			<div class="aspect">
 				<div class="aspect-inner">
 					<div class="flipbook" id="flipbook">
-						<div class="page hard">
+						<div class="page">
 							<img src="assets/guestbook_front.jpg" draggable="false" alt="" /><
 						</div>
 						<!-- <div class="page innerpage"></div> -->
-						<div class="page innerpage hard">
+						<div class="page innerpage">
 							<div class="guestbook_text">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus sed metus sed vulputate.
 								Aenean et quam nec justo accumsan volutpat. Praesent bibendum pharetra libero ac efficitur.
@@ -35,7 +35,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="page innerpage hard">
+						<div class="page innerpage">
 							<div class="guestbook_text">
 								Praesent bibendum pharetra libero ac efficitur.
 								Etiam porttitor erat eget enim iaculis, at porttitor arcu gravida. Donec fringilla ipsum et molestie viverra.
@@ -45,7 +45,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="page innerpage hard">
+						<div class="page innerpage">
 							<div class="guestbook_text">
 								Vivamus condimentum sollicitudin convallis. Etiam id mauris odio. Etiam egestas et purus volutpat convallis.
 								Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.
@@ -55,8 +55,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="page innerpage hard"></div>
-						<div class="page hard">
+						<div class="page innerpage"></div>
+						<div class="page">
 							<img src="assets/guestbook_back.jpg" draggable="false" alt="" />
 						</div>
 					</div>
@@ -80,9 +80,9 @@
 
 		<div class="endpage_videos">
 			<h1>VIDEOS</h1>
+			<!-- <p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p> -->
 		</div>
 
 		<div class="socials">
@@ -104,49 +104,9 @@
 		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-	<script src="js/index.js"></script>
+	<!-- <script src="js/index.js"></script> -->
 	<script src="js/zoom.min.js"></script>
 	<script src="js/turn.min.js"></script>
-	<script type="text/javascript">
-		var flipbookEL = document.getElementById('flipbook');
-		window.addEventListener('resize', function (e) {
-			flipbookEL.style.width = '';
-			flipbookEL.style.height = '';
-			// $(flipbookEL).turn('size', flipbookEL.clientWidth, flipbookEL.clientHeight);
-
-			if (window.innerWidth < 768) {
-				$(flipbookEL).turn('display', 'single');
-				$(flipbookEL).turn('size', flipbookEL.clientHeight, flipbookEL.clientWidth);
-				$(flipbookEL).css("margin", "auto");
-				var newHeight = $(flipbookEL).css("height");
-				$(".wrapper").css("height", newHeight);
-				$(".wrapper").css("align-items", "baseline");
-			}
-			else {
-				$(flipbookEL).turn('display', 'double');
-				$(flipbookEL).turn('size', flipbookEL.clientWidth, flipbookEL.clientHeight);
-				var newHeight = $(flipbookEL).css("height");
-				$(".wrapper").css("height", newHeight);
-				$(".wrapper").css("align-items", "center");
-			}
-		});
-		$(flipbookEL).turn({
-			autoCenter: true
-		});
-		if (window.innerWidth < 768) {
-			$(flipbookEL).turn('display', 'single');
-			$(flipbookEL).turn('size', flipbookEL.clientHeight, flipbookEL.clientWidth);
-			$(flipbookEL).css("margin", "auto");
-			var newHeight = $(flipbookEL).css("height");
-			$(".wrapper").css("height", newHeight);
-			$(".wrapper").css("align-items", "baseline");
-		}
-		else {
-			$(flipbookEL).turn('display', 'double');
-			$(flipbookEL).turn('size', flipbookEL.clientWidth, flipbookEL.clientHeight);
-			var newHeight = $(flipbookEL).css("height");
-			$(".wrapper").css("height", newHeight);
-			$(".wrapper").css("align-items", "center");
-		}
-	</script>
+	<script src="js/swipedetector.js"></script>
+	<script src="js/guestbook.js"></script>
 </html>
