--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" href="css/guestbook.css">
 	</head>
 	<body>
+		<video playsinline autoplay muted loop disablepictureinpicture preload="auto" id="watercolorIntro">
+			<source src="assets/watercolorloop.mp4" type="video/mp4">
+		</video>
 		<div class="endpage_btn_div">
 			<button class="button" onclick="window.location.href='index.html';">
 				< Back to start
