--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -23,7 +23,7 @@
 				<div class="aspect-inner">
 					<div class="flipbook" id="flipbook">
 						<div class="page">
-							<img src="assets/guestbook_front.jpg" draggable="false" alt="" /><
+							<img src="assets/guestbook_front.jpg" draggable="false" alt="" />
 						</div>
 						<!-- <div class="page innerpage"></div> -->
 						<div class="page innerpage">
