add video bg to all pages

--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -83,9 +83,9 @@
 
 		<div class="endpage_videos">
 			<h1>VIDEOS</h1>
-			<!-- <p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p> -->
+			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 		</div>
 
 		<div class="socials">
