buttons for guestbook

--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -66,6 +66,14 @@
 				</div>
 			</div>
 		</div>
+		<div class="guestbook_btns_div">
+			<button class="button" onclick="prevPage()">
+				<
+			</button>
+			<button class="button" onclick="nextPage()">
+				>
+			</button>
+		</div>
 		<!-- END GUESTBOOK -->
 
 		<div class="endpage_btn_div">
