--- a/MIXEDEMOTIONS/guestbook_entry.html
+++ b/MIXEDEMOTIONS/guestbook_entry.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>ROY WOODS - MIXED EMOTIONS</title>
 		<link rel="stylesheet" href="css/base.css">
-		<style media="screen">
+		<style>
 			.backtosite {
 				font-size: 1.7vw;
 				margin: auto;
@@ -31,8 +31,10 @@
 				width: 100%;
 				font-family: inherit;
 				font-size: 1.7vw;
-				padding-top: 0.5vw;
-				padding-left: 0.5vw;
+				padding-top: 0.7vw;
+				padding-left: 0.7vw;
+				border: none;
+				margin-top: 0.8vw;
 			}
 
 			#message_textarea {
@@ -55,6 +57,7 @@
 					font-size: 4vw;
 					padding-top: 1.5vw;
 					padding-left: 1.5vw;
+					margin-top: 2vw;
 				}
 
 				#message_textarea {
