new notes done i think

--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -23,7 +23,7 @@
 				<div class="aspect-inner">
 					<div class="flipbook" id="flipbook">
 						<div class="page">
-							<img src="assets/guestbook_front.jpg" draggable="false" alt="" />
+							<img src="assets/guestbook_front_new.jpg" draggable="false" alt="" />
 						</div>
 						<!-- <div class="page innerpage"></div> -->
 						<div class="page innerpage">
@@ -67,12 +67,8 @@
 			</div>
 		</div>
 		<div class="guestbook_btns_div">
-			<button class="button" onclick="prevPage()">
-				<
-			</button>
-			<button class="button" onclick="nextPage()">
-				>
-			</button>
+			<span id="prevPageText">< Prev Page</span>
+			<span id="nextPageText">Next Page ></span>
 		</div>
 		<!-- END GUESTBOOK -->
 
