--- a/MIXEDEMOTIONS/guestbook_entry.html
+++ b/MIXEDEMOTIONS/guestbook_entry.html
@@ -66,7 +66,9 @@
 				}
 
 				.backtosite {
-					font-size: 4vw;
+					font-size: 5vw;
+					padding-top: 8vw;
+					padding-bottom: 2vw;
 				}
 
 				input[type=submit] {
