--- a/MIXEDEMOTIONS/guestbook_entry.html
+++ b/MIXEDEMOTIONS/guestbook_entry.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>ROY WOODS - MIXED EMOTIONS</title>
 		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/guestbook.css">
 		<style>
 			.backtosite {
 				font-size: 1.7vw;
