--- a/MIXEDEMOTIONS/guestbook_entry.html
+++ b/MIXEDEMOTIONS/guestbook_entry.html
@@ -46,6 +46,7 @@
 			input[type=submit] {
 				margin-top: 1vw;
 				padding-bottom: 0.9vw;
+				-webkit-appearance: none;
 			}
 
 			@media only screen and (max-width: 768px) {
